Add player registration

--- a/src/Pin.CricketDarts.Server/_Imports.razor
+++ b/src/Pin.CricketDarts.Server/_Imports.razor
@@ -7,4 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Pin.CricketDarts.Server
+@using Pin.CricketDarts.Server.Models
 @using Pin.CricketDarts.Server.Shared
+@using Pin.CricketDarts.Server.Services.Interfaces
+@using Pin.CricketDarts.Server.Components
