--- a/src/Pin.CricketDarts.Server/Pages/Index.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
+@inject IPlayerService playerService;
+<PageTitle>Player Registration</PageTitle>
+<Registration OnSave ="AddPlayer"></Registration>
 
-<PageTitle>Index</PageTitle>
+@code{
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+}
