--- a/src/Pin.CricketDarts.Server/Shared/NavMenu.razor
+++ b/src/Pin.CricketDarts.Server/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="tournament">
-                <span class="oi oi-play-circle" aria-hidden="true"></span> Tournament
+                <span class="oi oi-play-circle" aria-hidden="true"></span> Games
             </NavLink>
         </div>
         <div class="nav-item px-3">
