Add GameService, Game and Score models

--- a/src/Pin.CricketDarts.Server/Pages/Games.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Games.razor
@@ -1,5 +1,5 @@
 ﻿@page "/tournament"
-@inject IPlayerService playerService;
+@inject IGameService playerService;
 
 <PageTitle>Statistics</PageTitle>
 
