Add GetGames to GameService

--- a/src/Pin.CricketDarts.Server/Pages/Games.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Games.razor
@@ -2,10 +2,12 @@
 @inject IGameService gameService;
 
 <PageTitle>Statistics</PageTitle>
+<GamesOverview CurrentGames="CurrentGames"></GamesOverview>
 
 @code{
     [Parameter]
     public List<Game> CurrentGames { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         await RefreshGames();
