--- a/src/Pin.CricketDarts.Server/Shared/MainLayout.razor
+++ b/src/Pin.CricketDarts.Server/Shared/MainLayout.razor
@@ -10,8 +10,8 @@
 
         </div>
 
-        <article class="content px-4">
+        <div class="content px-4 mx-auto text-center h-100">
             @Body
-        </article>
+        </div>
     </main>
 </div>
