--- a/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
+++ b/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col border-bottom">
                         <button class="btn btn-light" @onclick="e => UpdateScoreBoard.InvokeAsync(scoreBoardEntryPlayerOneId)">
-                            @GetSymbol(target, playerOne.Id);
+                            @GetSymbol(target, playerOne.Id)
                         </button>
                     </div>
                     <div class="col border-start border-end">
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col border-bottom">
                         <button class="btn btn-light" @onclick="e => UpdateScoreBoard.InvokeAsync(scoreBoardEntryPlayerTwoId)">
-                            @GetSymbol(target, playerOne.Id);
+                            @GetSymbol(target, playerTwo.Id)
                         </button>
                     </div>
                 </div>
@@ -55,51 +55,14 @@
     [Parameter]
     public EventCallback<Guid> UpdateScoreBoard { get; set; }
 
-    private int CalculateStatus(int currentStatus)
-    {
-        if (currentStatus == 0) return 1;
-        else if (currentStatus == 1) return 2;
-        else return 3;
-    }
-
-    //private Dictionary<string, string> symbols { get; set; } = new();
-
-    //private void ChangeSymbol(int position, Guid playerId)
-    //{
-    //    KeyValuePair<string, string> symbol;
-    //    if (position != 14) symbol = symbols.Where(s => s.Key == $"{player}-{position}").FirstOrDefault();
-    //    else symbol = symbols.Where(s => s.Key == $"{player}-bull").FirstOrDefault();
-
-    //    if (symbol.Value == "") symbols[symbol.Key] = "/";
-    //    else if (symbol.Value == "/") symbols[symbol.Key] = "x";
-    //    else if (symbol.Value == "x") symbols[symbol.Key] = "⨂";
-    //}
-
     private string GetSymbol(int target, Guid playerId)
     {
         var targetStatus = ActiveGame.ScoreBoardEntries.Where(s => s.PlayerId == playerId && s.Target == target).FirstOrDefault().Status;
 
-        if (targetStatus == 0) return "open";
-        else if (targetStatus == 1) return "single";
-        else if (targetStatus == 2) return "double";
-        else return "triple";
+        if (targetStatus == 0) return "";
+        else if (targetStatus == 1) return "/";
+        else if (targetStatus == 2) return "x";
+        else return "⨂";
     }
-
-    //protected override void OnInitialized()
-    //{
-    //    for (int i = 20; i > 13; i--)
-    //    {
-    //        if (i != 14)
-    //        {
-    //            symbols.Add($"playerOne-{i}", "");
-    //            symbols.Add($"playerTwo-{i}", "");
-    //        }
-
-    //        else
-    //        {
-    //            symbols.Add($"playerOne-bull", "");
-    //            symbols.Add($"playerTwo-bull", "");
-    //        }
-    //    }
 }
-}
+
