--- a/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
+++ b/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
@@ -1,10 +1,10 @@
 ﻿@page "/SelectedGame/{SelectedGameId:guid}"
 @inject IGameService gameService;
+@inject IScoreBoardEntryService scoreBoardEntryService;
 
 <PageTitle>Scoreboard</PageTitle>
 <ScoreBoard ActiveGame="ActiveGame"
-            UpdateScoreBoard="UpdateScoreBoard"
-            CreateScoreBoardEntry="CreateScoreBoardEntry"></ScoreBoard>
+            UpdateScoreBoard="UpdateScoreBoard"></ScoreBoard>
 
 @code{
     [Parameter]
@@ -26,12 +26,20 @@
     {
         var status = ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().Status;
 
-        if (status == 0) ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().Status = 1;
-        else if (status == 1) ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().Status = 2;
-        else ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().Status = 3;
+        var toUpdate = new ScoreBoardEntry
+        {
+            GameId = ActiveGame.Id,
+            Id = id,
+            PlayerId = ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().PlayerId,
+            Target = ActiveGame.ScoreBoardEntries.Where(s => s.Id == id).FirstOrDefault().Target
+        };
 
-        await gameService.UpdateGame(ActiveGame);
-        StateHasChanged();
+        if (status == 0) toUpdate.Status = 1;
+        else if (status == 1) toUpdate.Status = 2;
+        else toUpdate.Status = 3;
+
+        await scoreBoardEntryService.UpdateScoreBoardEntry(toUpdate);
+        await GetCurrentGame();
     }
 
     private async Task CreateScoreBoardEntries()
@@ -41,7 +49,8 @@
         {
             @for (int i = 20; i > 13; i--)
             {
-                var entry = ActiveGame.ScoreBoardEntries.ToList().Find(e => e.Target == i && e.PlayerId == player.Id);
+                var scoreBoardEntries = await scoreBoardEntryService.GetScoreBoardEntries();
+                var entry = scoreBoardEntries.Where(e => e.Target == i && e.PlayerId == player.Id).FirstOrDefault();
 
                 if (entry == null)
                 {
@@ -54,14 +63,10 @@
                         Target = i
                     };
 
-                    ActiveGame.ScoreBoardEntries.Add(newEntry);
+                    await scoreBoardEntryService.CreateScoreBoardEntry(newEntry);
                 }
-
             }
         }
-
-
-
-        await gameService.UpdateGame(ActiveGame);
+        await GetCurrentGame();
     }
 }
