Add new migration

--- a/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
+++ b/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
@@ -18,8 +18,8 @@
             @for (int i = 20; i > 13; i--)
             {
                 int target = i;
-                Guid scoreBoardEntryPlayerOneId = ActiveGame.ScoreBoardEntries.Where(s => s.Target == i && s.PlayerId == playerOne.Id).FirstOrDefault().Id;
-                Guid scoreBoardEntryPlayerTwoId = ActiveGame.ScoreBoardEntries.Where(s => s.Target == i && s.PlayerId == playerTwo.Id).FirstOrDefault().Id;
+                Guid? scoreBoardEntryPlayerOneId = ActiveGame.ScoreBoardEntries.Where(s => s.Target == i && s.PlayerId == playerOne.Id).FirstOrDefault().Id;
+                Guid? scoreBoardEntryPlayerTwoId = ActiveGame.ScoreBoardEntries.Where(s => s.Target == i && s.PlayerId == playerTwo.Id).FirstOrDefault().Id;
 
                 <div class="row">
                     <div class="col border-bottom">
