--- a/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
+++ b/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
@@ -16,7 +16,7 @@
     protected override async Task OnInitializedAsync()
     {
         await GetCurrentGame();
-        await CreateScoreBoardEntries();
+        //await CreateScoreBoardEntries();
     }
 
     private async Task GetCurrentGame()
